--- a/blog-1.html
+++ b/blog-1.html
@@ -32,8 +32,8 @@
                     <div class="col-lg-4 col-md-12">
                         <div class="logo">
                             <a href="index.html">
-                                <h1>Auto<span>Wash</span></h1>
-                                <!-- <img src="img/logo.jpg" alt="Logo"> -->
+                                <!-- <h1>Auto<span>Wash</span></h1>-->
+                                <img src="img/logo.jpg" alt="Logo"> 
                             </a>
                         </div>
                     </div>
@@ -45,8 +45,8 @@
                                         <i class="far fa-clock"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Opening Hour</h3>
-                                        <p>Mon - Fri, 8:00 - 9:00</p>
+                                        <h3>Mở cửa</h3>
+                                        <p>T2 - T6, 8:00 - 17:00</p>
                                     </div>
                                 </div>
                             </div>
@@ -56,7 +56,7 @@
                                         <i class="fa fa-phone-alt"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Call Us</h3>
+                                        <h3>Điện thoại</h3>
                                         <p>+012 345 6789</p>
                                     </div>
                                 </div>
@@ -67,7 +67,7 @@
                                         <i class="far fa-envelope"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Email Us</h3>
+                                        <h3>Email</h3>
                                         <p>info@example.com</p>
                                     </div>
                                 </div>
@@ -94,7 +94,7 @@
                             <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
                             <!-- <a href="service.html" class="nav-item nav-link">Lĩnh vực kinh doanh</a> -->
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Lĩnh vực kinh doanh</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Lĩnh vực kinh doanh</a>
                                 <div class="dropdown-menu">
                                     <a href="blog.html" class="dropdown-item">Thi công cơ điện PSC</a>
                                     <a href="single.html" class="dropdown-item">Thiết kế – sản xuất tủ ĐKBV</a>
@@ -102,7 +102,7 @@
                                     <a href="single-3.html" class="dropdown-item">Kiểm định chất lượng điện năng – Inverter</a>
                                 </div>
                             </div>
-                            <a href="blog-1.html" class="nav-item nav-link">Năng lực công ty</a>
+                            <a href="blog-1.html" class="nav-item nav-link active">Năng lực công ty</a>
                             <!-- <a href="price.html" class="nav-item nav-link">Price</a> -->
                             <!-- <a href="location.html" class="nav-item nav-link">Washing Points</a> -->
                             <!-- <div class="nav-item dropdown">
@@ -131,11 +131,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Blog Grid</h2>
+                        <h2>Năng lực công ty</h2>
                     </div>
                     <div class="col-12">
-                        <a href="">Home</a>
-                        <a href="">Blog</a>
+                        <a href="">Trang chủ</a>
+                        <a href="">Năng lực công ty</a>
                     </div>
                 </div>
             </div>
@@ -146,10 +146,10 @@
         <!-- Blog Start -->
         <div class="blog">
             <div class="container">
-                <div class="section-header text-center">
+                <!-- <div class="section-header text-center">
                     <p>Our Blog</p>
                     <h2>Latest news & articles</h2>
-                </div>
+                </div> -->
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="blog-item">
@@ -162,9 +162,9 @@
                                 </div>
                             </div>
                             <div class="blog-text">
-                                <h3><a href="#">Lorem ipsum dolor sit amet</a></h3>
+                                <h3><a href="#">Năng Lực Thiết Bị</a></h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Pellent iaculis blandit lorem, quis convall diam eleife. Nam in arcu sit amet massa ferment quis enim. Nunc  augue velit metus congue eget semper
+                                    THIẾT BỊ KIỂM ĐỊNH PHƯƠNG TIỆN ĐO Thiết bị kiểm định công tơ điện 3 pha KAIPU KP-S3000 Thiết bị kiểm công tơ điện 3 pha tại hiện trường: PTS2.3 Thiết bị kiểm …
                                 </p>
                             </div>
                             <div class="blog-meta">
@@ -185,9 +185,9 @@
                                 </div>
                             </div>
                             <div class="blog-text">
-                                <h3><a href="#">Lorem ipsum dolor sit amet</a></h3>
+                                <h3><a href="#">Download HSNL</a></h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Pellent iaculis blandit lorem, quis convall diam eleife. Nam in arcu sit amet massa ferment quis enim. Nunc  augue velit metus congue eget semper
+                                    Thư ngỏ  Kính gửi: QUÝ KHÁCH HÀNG Lời đầu tiên, tôi xin thay mặt Công ty Cổ phần Dịch vụ Điện lực PSC gửi tới Quý khách hàng lời chào trân trọng cùng lời chúc sức khỏe và thành công. PSC là Công ty …
                                 </p>
                             </div>
                             <div class="blog-meta">
@@ -208,9 +208,9 @@
                                 </div>
                             </div>
                             <div class="blog-text">
-                                <h3><a href="#">Lorem ipsum dolor sit amet</a></h3>
+                                <h3><a href="#">Hệ thống quản lý chất lượng</a></h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Pellent iaculis blandit lorem, quis convall diam eleife. Nam in arcu sit amet massa ferment quis enim. Nunc  augue velit metus congue eget semper
+                                    Nhằm đảm bảo chất lượng dịch vụ, ngay từ những ngày đầu thành lập Công ty Cổ phần dịch vụ điện lực (PSC) đã cho áp dụng hệ thống quản lý chất lượng ISO 9001:2008. Sau khi hệ thống ISO 9001:2015 được …
                                 </p>
                             </div>
                             <div class="blog-meta">
@@ -231,9 +231,9 @@
                                 </div>
                             </div>
                             <div class="blog-text">
-                                <h3><a href="#">Lorem ipsum dolor sit amet</a></h3>
+                                <h3><a href="#">CÁC DỊCH VỤ DÀNH CHO KHÁCH HÀNG</a></h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Pellent iaculis blandit lorem, quis convall diam eleife. Nam in arcu sit amet massa ferment quis enim. Nunc  augue velit metus congue eget semper
+                                    THÍ NGHIỆM SAU LẮP ĐẶT (SAT) Công ty cổ phần dịch vụ điện lực PSC chuyên cung cấp các dịch vụ thí nghiệm cho công trình điện trước khi đóng điện, để đảm bảo thiết bị vận hành an toàn vì những lý do …
                                 </p>
                             </div>
                             <div class="blog-meta">
