--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
                     <div class="col-lg-4 col-md-12">
                         <div class="logo">
                             <a href="index.html">
-                                <h1>S<span>E</span>C</h1>
-                                <!-- <img src="img/logo.jpg" alt="Logo"> -->
+                                <!-- <h1>Auto<span>Wash</span></h1>-->
+                                <img src="img/logo.jpg" alt="Logo"> 
                             </a>
                         </div>
                     </div>
@@ -45,8 +45,8 @@
                                         <i class="far fa-clock"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Opening Hour</h3>
-                                        <p>Mon - Fri, 8:00 - 9:00</p>
+                                        <h3>Mở cửa</h3>
+                                        <p>T2 - T6, 8:00 - 17:00</p>
                                     </div>
                                 </div>
                             </div>
@@ -56,7 +56,7 @@
                                         <i class="fa fa-phone-alt"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Call Us</h3>
+                                        <h3>Điện thoại</h3>
                                         <p>+012 345 6789</p>
                                     </div>
                                 </div>
@@ -67,7 +67,7 @@
                                         <i class="far fa-envelope"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Email Us</h3>
+                                        <h3>Email</h3>
                                         <p>info@example.com</p>
                                     </div>
                                 </div>
@@ -90,12 +90,22 @@
 
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
-                            <a href="about.html" class="nav-item nav-link active">About</a>
-                            <a href="service.html" class="nav-item nav-link">Service</a>
-                            <a href="price.html" class="nav-item nav-link">Price</a>
-                            <a href="location.html" class="nav-item nav-link">Washing Points</a>
+                            <a href="index.html" class="nav-item nav-link ">Trang chủ</a>
+                            <a href="about.html" class="nav-item nav-link active">Giới thiệu</a>
+                            <!-- <a href="service.html" class="nav-item nav-link">Lĩnh vực kinh doanh</a> -->
                             <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Lĩnh vực kinh doanh</a>
+                                <div class="dropdown-menu">
+                                    <a href="blog.html" class="dropdown-item">Thi công cơ điện PSC</a>
+                                    <a href="single.html" class="dropdown-item">Thiết kế – sản xuất tủ ĐKBV</a>
+                                    <a href="single-2.html" class="dropdown-item">Thí nghiệm – Kiểm định TBĐ</a>
+                                    <a href="single-3.html" class="dropdown-item">Kiểm định chất lượng điện năng – Inverter</a>
+                                </div>
+                            </div>
+                            <a href="blog-1.html" class="nav-item nav-link">Năng lực công ty</a>
+                            <!-- <a href="price.html" class="nav-item nav-link">Price</a> -->
+                            <!-- <a href="location.html" class="nav-item nav-link">Washing Points</a> -->
+                            <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu">
                                     <a href="blog.html" class="dropdown-item">Blog Grid</a>
@@ -103,12 +113,12 @@
                                     <a href="team.html" class="dropdown-item">Team Member</a>
                                     <a href="booking.html" class="dropdown-item">Schedule Booking</a>
                                 </div>
-                            </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            </div> -->
+                            <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
                         </div>
-                        <div class="ml-auto">
+                        <!-- <div class="ml-auto">
                             <a class="btn btn-custom" href="#">Get Appointment</a>
-                        </div>
+                        </div> -->
                     </div>
                 </nav>
             </div>
@@ -121,11 +131,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>About Us</h2>
+                        <h2>Giới thiệu</h2>
                     </div>
                     <div class="col-12">
-                        <a href="">Home</a>
-                        <a href="">About Us</a>
+                        <a href="">Trang chủ</a>
+                        <a href="">Giới thiệu</a>
                     </div>
                 </div>
             </div>
@@ -139,25 +149,28 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img">
-                            <img src="img/about.jpg" alt="Image">
+                            <img src="img/electric.jpg" alt="Image">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="section-header text-left">
-                            <p>About Us</p>
-                            <h2>car washing and detailing</h2>
+                            <p>Giới thiệu</p>
+                            <h2>Công ty TNHH dịch vụ điện lực SEC</h2>
                         </div>
                         <div class="about-content">
                             <p>
-                                Lorem ipsum dolor sit amet elit. In vitae turpis. Donec in hendre dui, vel blandit massa. Ut vestibu suscipi cursus. Cras quis porta nulla, ut placerat risus. Aliquam nec magna eget velit luctus dictum
+                                Công ty TNHH dịch vụ điện lực SEC được thành lập năm 2021, là đơn vị chuyên kiểm định, hiệu chuẩn các thiết bị thí nghiệm và thiết bị kiểm định của toàn Điện lực, xử lý sự cố lưới điện phục vụ cho công tác sản xuất, kinh doanh điện của Công ty.
+                            </p>
+                            <p>
+                                Các lĩnh vực hoạt động của Công ty:
                             </p>
                             <ul>
-                                <li><i class="far fa-check-circle"></i>Seats washing</li>
-                                <li><i class="far fa-check-circle"></i>Vacuum cleaning</li>
-                                <li><i class="far fa-check-circle"></i>Interior wet cleaning</li>
-                                <li><i class="far fa-check-circle"></i>Window wiping</li>
+                                <li><i class="far fa-check-circle"></i>Thi công cơ điện PSC</li>
+                                <li><i class="far fa-check-circle"></i>Thiết kế – sản xuất tủ ĐKBV</li>
+                                <li><i class="far fa-check-circle"></i>Thí nghiệm – Kiểm định TBĐ</li>
+                                <li><i class="far fa-check-circle"></i>Kiểm định chất lượng điện năng – Inverter</li>
                             </ul>
-                            <a class="btn btn-custom" href="">Learn More</a>
+                            <a class="btn btn-custom" href="">Xem thêm</a>
                         </div>
                     </div>
                 </div>
@@ -167,7 +180,7 @@
         
         
         <!-- Facts Start -->
-        <div class="facts" data-parallax="scroll" data-image-src="img/facts.jpg">
+        <!-- <div class="facts" data-parallax="scroll" data-image-src="img/facts.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
@@ -208,7 +221,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Facts End -->
 
 
@@ -216,24 +229,24 @@
         <div class="team">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>Meet Our Team</p>
-                    <h2>Our Engineers & Workers</h2>
+                    <p>Đội ngũ</p>
+                    <h2>Đội ngũ sáng lập</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-1.jpg" alt="Team Image">
+                                <img src="img/viet-2.png" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Donald John</h2>
-                                <p>Engineer</p>
-                                <div class="team-social">
+                                <h2>Vương Đình Việt</h2>
+                                <p>Giám đốc điều hành</p>
+                                <!-- <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
                                     <a href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -243,48 +256,48 @@
                                 <img src="img/team-2.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Adam Phillips</h2>
-                                <p>Engineer</p>
-                                <div class="team-social">
+                                <h2>Nguyễn Huy Thắng</h2>
+                                <p>Giám đốc kỹ thuật</p>
+                                <!-- <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
                                     <a href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-3.jpg" alt="Team Image">
+                                <img src="img/hiep-2.png" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Thomas Olsen</h2>
-                                <p>Worker</p>
-                                <div class="team-social">
+                                <h2>Phó Đức Hiệp</h2>
+                                <p>Giám đốc y tế</p>
+                                <!-- <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
                                     <a href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-4.jpg" alt="Team Image">
+                                <img src="img/hai-2.png" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>James Alien</h2>
-                                <p>Worker</p>
-                                <div class="team-social">
+                                <h2>Lê Minh Hải</h2>
+                                <p>Giám đốc vệ sinh</p>
+                                <!-- <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
                                     <a href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
