--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                                 <div class="dropdown-menu">
                                     <a href="blog.html" class="dropdown-item">Thi công cơ điện PSC</a>
                                     <a href="single.html" class="dropdown-item">Thiết kế – sản xuất tủ ĐKBV</a>
-                                    <a href="team.html" class="dropdown-item">Thí nghiệm – Kiểm định TBĐ</a>
-                                    <a href="booking.html" class="dropdown-item">Kiểm định chất lượng điện năng – Inverter</a>
+                                    <a href="single-2.html" class="dropdown-item">Thí nghiệm – Kiểm định TBĐ</a>
+                                    <a href="single-3.html" class="dropdown-item">Kiểm định chất lượng điện năng – Inverter</a>
                                 </div>
                             </div>
-                            <a href="service.html" class="nav-item nav-link">Năng lực công ty</a>
+                            <a href="blog-1.html" class="nav-item nav-link">Năng lực công ty</a>
                             <!-- <a href="price.html" class="nav-item nav-link">Price</a> -->
                             <!-- <a href="location.html" class="nav-item nav-link">Washing Points</a> -->
                             <!-- <div class="nav-item dropdown">
