--- a/single-3.html
+++ b/single-3.html
@@ -131,11 +131,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Thiết kế – sản xuất tủ ĐKBV</h2>
+                        <h2>Kiểm định chất lượng điện năng – Inverter</h2>
                     </div>
                     <div class="col-12">
                         <a href="">Trang chủ</a>
-                        <a href="">Thiết kế – sản xuất tủ ĐKBV</a>
+                        <a href="">Kiểm định chất lượng điện năng – Inverter</a>
                     </div>
                 </div>
             </div>
