--- a/blog.html
+++ b/blog.html
@@ -131,11 +131,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Blog Grid</h2>
+                        <h2>Thi công cơ điện PSC</h2>
                     </div>
                     <div class="col-12">
-                        <a href="">Home</a>
-                        <a href="">Blog</a>
+                        <a href="">Trang chủ</a>
+                        <a href="">Thi công cơ điện PSC</a>
                     </div>
                 </div>
             </div>
