--- a/blog.html
+++ b/blog.html
@@ -32,8 +32,8 @@
                     <div class="col-lg-4 col-md-12">
                         <div class="logo">
                             <a href="index.html">
-                                <h1>Auto<span>Wash</span></h1>
-                                <!-- <img src="img/logo.jpg" alt="Logo"> -->
+                                <!-- <h1>Auto<span>Wash</span></h1>-->
+                                <img src="img/logo.jpg" alt="Logo"> 
                             </a>
                         </div>
                     </div>
@@ -45,8 +45,8 @@
                                         <i class="far fa-clock"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Opening Hour</h3>
-                                        <p>Mon - Fri, 8:00 - 9:00</p>
+                                        <h3>Mở cửa</h3>
+                                        <p>T2 - T6, 8:00 - 17:00</p>
                                     </div>
                                 </div>
                             </div>
@@ -56,7 +56,7 @@
                                         <i class="fa fa-phone-alt"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Call Us</h3>
+                                        <h3>Điện thoại</h3>
                                         <p>+012 345 6789</p>
                                     </div>
                                 </div>
@@ -67,7 +67,7 @@
                                         <i class="far fa-envelope"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Email Us</h3>
+                                        <h3>Email</h3>
                                         <p>info@example.com</p>
                                     </div>
                                 </div>
